# SI_Exam

./: test-hook.txt
01a/: README.md  pyproject.toml
01a/js/: package-lock.json  package.json  parser.js  server.js
01a/src/: main.py  parser.py
03a/: README.md
03a/server_a/: pyproject.toml
03a/server_a/src/: main.py  parser.py
03a/server_b/: go.mod  go.sum  main.go
03a/server_b/docs/: docs.go  swagger.json  swagger.yaml
03a/server_b/parser/: parser.go
04a/: README.md  pyproject.toml
04a/client/: index.html
04a/src/: main.py
04b/: README.md
06a/: README.md  pyproject.toml
06a/src/: main.py
10a/: .gitignore  Documentation_Report.md  README.md  docker-compose.yml  package-lock.json  package.json
10a/docs/: generate-docs.bat  hospital-docs.html  schemaspy.properties
10a/docs/metadata/: tables.xml
10a/scripts/: init-db.sql
10a/src/: config.js  database.js  test-connection-pg.js  test-connection.js
10b/: .gitignore  README.md  docker-compose.yml  package.json
10b/config/: db_config.js
10b/scripts/: extract_from_postgres.js  load_to_mongodb.js  run_migration.js  seed-postgres.js  transform_data.js
10b/transformed/: appointments.json  departments.json  medical_records.json  patients.json  staff.json
11a/: README.md  package-lock.json  package.json
11a/src/: App.css  App.js  firebase.js
11b/: README.md  package-lock.json  package.json  server.js
11b/public/: index.html  script.js  styles.css
12a/Exposee/: .gitignore  README.md  package.json
12a/Integrator/: .gitignore  README.md  index.html  package.json  register-webhook.js  server.js  storage.js  vercel.json
13a/: README.md  package-lock.json  package.json  schema.graphql  server.js  subscription-test.html
8a/01._webrtc_browser_sdp/: Readme.md  index.html
8a/02._webrtc_firestore/: README.md  index.html
8b/: Documentation.txt
data/books/: books.csv  books.json  books.txt  books.xml  books.yaml
data/movies/: movies.csv  movies.json  movies.txt  movies.xml  movies.yaml
(+27 files in other folders)
