[project]
name = "04a"
version = "0.1.0"
description = "A simple SSE server using FastAPI"
authors = [
    {name = "HaDoCK", email = "jako7096@stud.kea.dk"}
]

requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src"